<resources>
    <string name="app_name">fusion1-events</string>
    <string-array name="selectRolesArray">
        <item>Select a role..</item>
        <item>ENTRANT</item>
        <item>ORGANIZER</item>
        <item>ADMIN</item>
    </string-array>

    <string name="Profile">Profile</string>

    <string name="Home">Home</string>
    <string name="people_count">people_count</string>

<!--    Admin Strings-->
    <string name="browse_events">Browse Events</string>
    <string name="select_tags">select Keywords</string>
    <string name="browse_images">Browse Images</string>
    <string name="view_notifications">View Notifications</string>
    <string name="browse_profiles">Browse Profiles</string>
    <string name="delete">Delete</string>
    <string name="test_admin_dashboard">Test Admin Dashboard</string>
    <string name="dashboard">Dashboard</string>
    <string name="view_details">View Details</string>
    <string name="events">Events</string>
    <string name="back">back</string>
    <string name="notifications">Notifications</string>
    <string name="geolocation_description">Use device location to verify where users join from</string>
    <string name="require_geolocation">Require geolocation</string>
    <string name="view_map">View Map</string>
    <string name="entrant_locations">Entrant Locations</string>
</resources>