<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/Dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textSize="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <Button
        style="@style/DashboardButton"
        android:id="@+id/buttonBrowseEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browse_events"
        android:background="@drawable/dashboard_button"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/Dashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonBrowseImages"
        />

    <Button
        style="@style/DashboardButton"
        android:id="@+id/buttonBrowseImages"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:text="@string/browse_images"
        android:background="@drawable/dashboard_button"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/buttonBrowseEvents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonViewNotifications"/>

    <Button
        style="@style/DashboardButton"
        android:id="@+id/buttonViewNotifications"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:text="@string/view_notifications"
        android:background="@drawable/dashboard_button"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/buttonBrowseImages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonBrowseProfiles"/>

    <Button
        style="@style/DashboardButton"
        android:id="@+id/buttonBrowseProfiles"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:text="@string/browse_profiles"
        android:background="@drawable/dashboard_button"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/buttonViewNotifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>